--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/xs.css">
     <link rel="stylesheet" href="style/sm.css">
@@ -50,20 +51,18 @@
                 <div class="row">
                     <div class="col-xxl-6 col-lg-6 col-md-6 col-sm-12 col-12 primary-screen-start-block">
                         <h1 class="title">MASTER<strong>AI revolution</strong></h1>
-                        <p class="text" style="max-width: 500px;">Train and sell ai software making a stable and passive
+                        <p class="text">Train and sell ai software making a stable and passive
                             income</p>
                         <button class="btn-order">
                             Join now
                         </button>
                     </div>
                     <div class="col-xxl-6 col-lg-6 col-md-6 col-sm-12 col-12 home-screen-end-block">
-                        <!-- <img src="images/Frame 1321314942.png" class="product-server" alt=""> -->
-                        <!-- <img src="images/Group 1321314953.png" class="product-server" alt=""> -->
-                        <!-- <img src="images/smartphone.svg" class="product-server" alt=""> -->
-                        <img src="images/smart.png" class="product-server" alt="">
-                        <div class="coin-1"></div>
-                        <div class="coin-2"></div>
-                        <div class="coin-3"></div>
+                        <div class="big-phone">
+                            <div class="coin-1"></div>
+                            <div class="coin-2"></div>
+                            <div class="coin-3"></div>
+                        </div>
                         <div class="gradient-light-circle"></div>
                     </div>
                 </div>
@@ -133,7 +132,12 @@
                         </div>
                         <h4 class="title">Subscribe <br>to AI Sowtware</h4>
                         <p class="text">Generate datasets and sell them in 1 click on our marketplace</p>
-                        <button class="btn-order">Learn how</button>
+                        <button class="btn-order">
+                            Learn how
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right-short" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8z"/>
+                              </svg>
+                        </button>
                     </div>
                     <div class="subscribe-end col-xxl-7 col-lg-7 col-md-12 col-sm-12 col-12">
                         <div class="arrow-lg"></div>
@@ -150,8 +154,12 @@
                     <h4 class="title">How <strong>t3bute AI</strong> works</h4>
                     <div class="row work-box work-box-first">
                         <div class="work-box-start work-first col-xxl-6 offset-xxl-0 col-xl-5 offset-xl-1 col-lg-6 col-md-6 col-sm-12 col-12">
-                            <img src="./images/work-11.png" alt="">
-                            <div class="work-bounce-sm"></div>
+                            <div class="work-box-image">
+                                <div class="work-image">
+                                    <img src="./images/work-1.png" alt="">
+                                </div>
+                                <div class="work-bounce-sm"></div>
+                            </div>
                         </div>
                         <div class="work-box-end col-xxl-6 col-xl-5 col-lg-6 col-md-6 col-12">
                             <div class="pre-text">Buy</div>
@@ -168,8 +176,12 @@
                                 datasets that are generated with our AI models</p>
                         </div>
                         <div class="work-box-start work-second col-xxl-6 col-xl-5 col-lg-6 col-md-6 col-sm-12 col-12 order-1 order-sm-1 order-md-2">
-                            <img src="./images/work-2.png" alt="">
-                            <div class="work-bounce-sm"></div>
+                            <div class="work-box-image">
+                                <div class="work-image">
+                                    <img src="./images/work-2.png" alt="">
+                                </div>
+                                <div class="work-bounce-sm"></div>
+                            </div>
                         </div>
                     </div>
                     <div class="row work-box work-box-third">
@@ -198,7 +210,7 @@
                                 </div>
                                 <a href="#">Sell for <span>$49</span></a>
                             </div>
-                            <div class="work-box-bounce"></div>
+                            <!-- <div class="work-box-bounce"></div> -->
                         </div>
                         <div class="work-box-end col-xxl-6 col-xl-5 col-lg-6 col-md-6 col-12">
                             <div class="pre-text">Sell</div>
@@ -222,8 +234,8 @@
                             Exciting Rewards with our exclusive New Member Engagement Program</p>
                     </div>
                 </div>
-                <div class="row" style="margin-bottom: 150px;">
-                    <div class="card-invite card-invite-first col-xxl-4 col-xl-4 col-md-6 col-lg-4 col-sm-12 col-12">
+                <div class="row card-section-box">
+                    <div class="card-invite card-invite-first col-xxl-4 offset-xl-0 col-xl-4 col-md-6 offset-md-3 col-lg-4 offset-lg-0 col-sm-12 col-12">
                         <div class="in-card-invite">
                             <div class="rank">Rank 1</div>
                             <div class="percent">18%</div>
@@ -231,7 +243,7 @@
                             <span class="lines">Lines</span> <span class="lines-level text-white fw-bold">1-5</span>
                         </div>
                     </div>
-                    <div class="card-invite card-invite-second col-xxl-4 col-xl-4 col-md-6 col-lg-4 col-sm-12 col-12">
+                    <div class="card-invite card-invite-second col-xxl-4 offset-xl-0 col-xl-4 col-md-6 offset-md-3 col-lg-4 offset-lg-0 col-sm-12 col-12">
                         <div class="in-card-invite">
                             <div class="rank">Rank 2</div>
                             <div class="percent">30%</div>
@@ -240,7 +252,7 @@
                             <span class="lines">Lines</span> <span class="lines-level text-white fw-bold">1-5</span>
                         </div>
                     </div>
-                    <div class="card-invite card-invite-third col-xxl-4 col-xl-4 col-lg-4 offset-lg-0 col-sm-12 col-md-6 offset-md-3 col-12">
+                    <div class="card-invite card-invite-third col-xxl-4 offset-xl-0 col-xl-4 col-lg-4 offset-lg-0 col-sm-12 col-md-6 offset-md-3 col-12">
                         <div class="in-card-invite">
                             <div class="rank">Rank 3</div>
                             <div class="percent">35%</div>
@@ -264,7 +276,7 @@
                             <p class="card-section-description">T3bute offers modern instruments to learn,
                                 play, earn, and simplify your life</p>
                         </div>
-                        <div class="col-xxl-7 col-xl-10 col-lg-10 col-md-12 col-sm-12 col-12">
+                        <div class="col-xxl-7 col-xl-10 col-lg-10 col-md-10 col-sm-12 col-12">
                             <div class="tab-content" id="roadmap-tabs">
                                 <div class="tab-pane fade show active" id="pills-step-1" role="tabpanel"
                                     aria-labelledby="pills-step-1-tab" tabindex="0">
@@ -450,7 +462,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xxl-1 col-xl-2 col-lg-2 col-md-12 col-sm-12 col-12">
+                        <div class="col-xxl-1 col-xl-2 col-lg-2 col-md-2 col-sm-12 col-12">
                             <ul class="nav-tabs-map nav nav-pills mb-3" id="pills-tab" role="tablist">
                                 <li class="nav-item" role="presentation">
                                     <button class="nav-link active" id="pills-step-1-tab" data-bs-toggle="pill"
