fixed home page css

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <!-- Card info -->
         <div id="about-screen">
             <div class="container-md">
-                <div class="d-md-flex justify-content-between">
+                <div class="in-about-screen d-md-block justify-content-md-center d-xl-flex d-xxl-flex d-lg-flex justify-content-between">
                     <div class="card-about">
                         <div class="in-card-about">
                             <div class="d-flex justify-content-between card-about-title">
@@ -161,7 +161,7 @@
                                 <div class="work-bounce-sm"></div>
                             </div>
                         </div>
-                        <div class="work-box-end col-xxl-6 col-xl-5 col-lg-6 col-md-6 col-12">
+                        <div class="work-box-end col-xxl-6 col-xl-5 col-lg-6 col-md-6 col-12 my-auto">
                             <div class="pre-text">Buy</div>
                             <h5 class="name">T3BUTE AI</h5>
                             <p class="text">T3BUTE AI learns from the marketand learns on each decision taken. Algorithm
@@ -169,7 +169,7 @@
                         </div>
                     </div>
                     <div class="row work-box work-box-second">
-                        <div class="work-box-end col-xxl-6 offset-xxl-0 col-xl-5 offset-xl-1 col-lg-6 col-md-6 col-sm-12 col-12 order-2 order-sm-2 order-md-1">
+                        <div class="work-box-end col-xxl-6 offset-xxl-0 col-xl-5 offset-xl-1 col-lg-6 col-md-6 col-sm-12 col-12 order-2 order-sm-2 order-md-1 my-auto">
                             <div class="pre-text">Upgrade</div>
                             <h5 class="name">Data set</h5>
                             <p class="text">You subscribe to T3BUTE learning software and became a sole owner of
@@ -212,7 +212,7 @@
                             </div>
                             <!-- <div class="work-box-bounce"></div> -->
                         </div>
-                        <div class="work-box-end col-xxl-6 col-xl-5 col-lg-6 col-md-6 col-12">
+                        <div class="work-box-end col-xxl-6 col-xl-5 col-lg-6 col-md-6 col-12 my-auto">
                             <div class="pre-text">Sell</div>
                             <h5 class="name">Sell your data and learn</h5>
                             <p class="text">We guarantee successful sale for your DataSets and pre-trained AI models
