fixed css, compress images home page

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                             <span class="sale my-auto me-2">Earn up to</span>
                             <span class="sale-badge"><strong>21%</strong>MONTHLY</span>
                         </div>
-                        <h4 class="title">Subscribe <br>to AI Sowtware</h4>
+                        <h4 class="title"><span>Subscribe</span> to AI Sowtware</h4>
                         <p class="text">Generate datasets and sell them in 1 click on our marketplace</p>
                         <button class="btn-order">
                             Learn how
