--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
                 <div class="d-flex flex-wrap justify-content-center in-footer">
                     <a href="index.html"
                         class="d-flex align-items-center me-md-auto link-body-emphasis text-decoration-none">
-                        <img src="./images/logo.png" alt="">
+                        <img src="./images/logo.svg" alt="">
                     </a>
                     <ul class="nav nav-pills">
                         <li class="nav-item active"><a href="index.html" class="nav-link">About</a></li>
